# cs179_final_project

./: README.md  cpu_demo.py  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  cpu_demo-checkpoint.py  test-checkpoint.ipynb
CPU/: README.md  cpu_demo.py
GPU/: CMakeLists.txt  README.md
GPU/include/: beta_dist.h  config.h  conv.h  conv_layer.h  fc.h  fc_layer.h  helper_cuda.h  layer.h  parameter.h  policy.h  relu.h  relu_layer.h  softplus_add1.h  tensor.h  utils.cuh
GPU/src/: beta_dist.cu  beta_dist_kernel.cuh  conv.cpp  conv_layer.cpp  fc.cu  fc_layer.cu  parameter.cpp  policy.cu  relu.cpp  relu_layer.cpp  softplus_add1.cu  tensor.cpp  utils.cu
GPU/test/: main.cu  test_beta_dist.cpp  test_conv.cpp  test_conv_layer.cpp  test_fc.cpp  test_fc_layer.cpp  test_parameter.cpp  test_policy.cpp  test_relu.cpp  test_relu_layer.cpp  test_softplus_add1.cpp  test_tensor.cu
GPU/test_gen/: beta_dist_test_gen.py  beta_test_gen.py  conv_test_gen.py  fc_test_gen.py  policy_test_gen.py  relu_test_gen.py  softplus_test_gen.py
